[package]
name = "erikfran-ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.3", features = ["rand"] }
rand = "0.8.5"
mnist = { version = "0.6.0", features = ["download"] }